--- a/style.css
+++ b/style.css
@@ -189,3 +189,20 @@ nav button:hover {
 .thank-you button:hover {
     background-color: #45a049;
 }
+
+.progress-image {
+    position: fixed;
+    bottom: 20px;
+    left: 20px;
+    width: 100px;
+    height: 100px;
+    z-index: 10;
+}
+
+.progress-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+
