--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -19,4 +19,8 @@
       <li>GMCI_Assignment03 <button>⬇ Download</button></li>
     </ul>
   </div>
+  <!-- Fortschritts-Bild -->
+  <div id="progress-image" class="progress-image hidden">
+    <img src="../Logo.png" alt="Progress Image" id="progress-img">
+  </div>
 </div>
