--- a/style.css
+++ b/style.css
@@ -95,6 +95,7 @@ footer {
     color: white;
     border: none;
     padding: 10px;
+    margin: 10px;
     border-radius: 5px;
     cursor: pointer;
     width: 100%;
@@ -213,6 +214,25 @@ footer {
     background-color: #45a049;
 }
 
+/* Remove default button styles */
+.logo-button {
+    background: none;
+    border: none;
+    padding: 0;
+    cursor: pointer;
+}
+
+.logo-button img {
+    height: 50px;
+    display: block;
+}
+
+/* Add hover effect if needed */
+.logo-button:hover img {
+    opacity: 0.8;
+    transition: opacity 0.3s;
+}
+
 .progress-image {
     position: fixed;
     bottom: 20px;
@@ -226,4 +246,52 @@ footer {
     width: 100%;
     height: 100%;
     object-fit: contain;
+}
+
+/* style.css */
+.home {
+    text-align: center;
+    margin: 50px auto;
+    max-width: 600px;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    background-color: #f9f9f9;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.home h1 {
+    font-size: 2rem;
+    color: #333;
+    margin-bottom: 10px;
+}
+
+.home p {
+    font-size: 1.1rem;
+    color: #555;
+    margin-bottom: 20px;
+}
+
+.home .btn-login {
+    font-size: 1.2rem;
+    color: #fff;
+    background-color: #4CAF50;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.home-container .btn-login:hover {
+    background-color: #45a049;
+}
+
+.mascot-img {
+    width: 250px;
+    height: 250px;
+    object-fit: contain;
+    position: fixed;
+    bottom: 70px;
+    left: 0;
 }
