--- a/views/thank-you.html
+++ b/views/thank-you.html
@@ -1,4 +1,4 @@
 <div id="thank-you" class="thank-you">
     <h2>Vielen Dank für deinen Upload!</h2>
-    <button onclick="loadView('views/dashboard.html', setupDashboard);">Zurück zur Startseite</button>
+    <button onclick="loadHome()">Zurück zur Startseite</button>
 </div>
