--- a/views/tutor-login.html
+++ b/views/tutor-login.html
@@ -1,6 +1,7 @@
 <div id="login-screen" class="login-container">
     <h3>Login mit WebSSO</h3>
-    <form onsubmit="return handleLogin(event)">
+    <p>Tutor Login</p>
+    <form onsubmit="return handleTutorLogin(event)">
         <input type="text" id="username" placeholder="LUH-ID" required>
         <input type="password" id="password" placeholder="WebSSO-Passwort" required>
         <button type="submit" class="btn-login">Anmelden</button>
