Added an assignment view and fixed the upload.

--- a/views/file-confirmation.html
+++ b/views/file-confirmation.html
@@ -1,5 +1,5 @@
 <div id="file-confirmation" class="file-confirmation">
     <h2>Hochladen der Datei</h2>
     <p>Dateiname: <span id="uploaded-filename"></span></p>
-    <button onclick="submitFile()">SUBMIT</button>
+    <button id="submit-button">SUBMIT</button>
 </div>
