--- a/style.css
+++ b/style.css
@@ -51,6 +51,22 @@ html, body {
     flex-direction: column;
 }
 
+.button {
+    font-size: 1.2rem;
+    color: #fff;
+    background-color: #4CAF50;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    margin: 10px;
+}
+
+.button:hover {
+    background-color: #45a049;
+}
+
 /* Main content should take all available space */
 main {
     flex: 1;
@@ -233,22 +249,7 @@ footer {
     transition: opacity 0.3s;
 }
 
-.progress-image {
-    position: fixed;
-    bottom: 20px;
-    left: 20px;
-    width: 100px;
-    height: 100px;
-    z-index: 10;
-}
-
-.progress-image img {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-}
-
-/* style.css */
+/* Home View */
 .home {
     text-align: center;
     margin: 50px auto;
@@ -287,11 +288,13 @@ footer {
     background-color: #45a049;
 }
 
+
+/* Mascot CSS */
 .mascot-img {
-    width: 250px;
+    width: 100%;
     height: 250px;
     object-fit: contain;
-    position: fixed;
-    bottom: 70px;
-    left: 0;
+    position: absolute;
+    bottom: 90px;
+    left: calc(-50% + 115px);
 }
