Tutor Grading upload working.

--- a/views/student-dashboard.html
+++ b/views/student-dashboard.html
@@ -5,7 +5,7 @@
     <ul id="open-assignments" class="assignment-list hidden"></ul>
   </div>
   <div class="assignment-section">
-    <h3 onclick="toggleSection('completed-assignments')">Abgeschlossene Assignments</h3>
+    <h3 onclick="toggleSection('completed-assignments')">Bearbeitete Assignments</h3>
     <ul id="completed-assignments" class="assignment-list hidden"></ul>
   </div>
   <!-- Fortschritts-Bild -->
