--- a/style.css
+++ b/style.css
@@ -154,7 +154,8 @@ footer {
     border-radius: 5px;
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    text-align: left;
+    cursor: pointer;
 }
 
 .assignment-list button {
@@ -297,4 +298,26 @@ footer {
     position: absolute;
     bottom: 90px;
     left: calc(-50% + 7.5vh);
+}
+
+.assignment {
+    background-color: #4CAF50;
+    flex-direction: column;
+}
+
+.assignment:hover {
+    color: #45a049;
+}
+
+.groups {
+    flex-direction: column;
+}
+
+.group {
+    color: black;
+    transition: background-color 0.3s ease;
+}
+
+.group:hover {
+    background-color: #45a049;
 }
