Tutors can add grades to assignments

--- a/views/file-confirmation.html
+++ b/views/file-confirmation.html
@@ -1,5 +1,8 @@
 <div id="file-confirmation" class="file-confirmation">
     <h2>Hochladen der Datei</h2>
     <p>Dateiname: <span id="uploaded-filename"></span></p>
+    <label>
+        <input id="grading-field" type="number" min="0" step="1" value="0" class="hidden"/>
+    </label>
     <button id="submit-button">SUBMIT</button>
 </div>
